k8s/demo5/buy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buy
  namespace: fantastic-bike
  labels:
    app: buy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buy
  template:
    metadata:
      labels:
        app: buy
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: ASBConnectionString
              valueFrom:
                secretKeyRef:
                  name: buy
                  key: ASBConnectionString
            - name: AzureWebJobsStorage
              valueFrom:
                secretKeyRef:
                  name: buy
                  key: AzureWebJobsStorage
          image: andrekiba/fantastic-bike-buy:v2
          name: fantastic-bike-buy
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      restartPolicy: Always
