k8s/demo5/shipper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipper
  namespace: fantastic-bike
  labels:
    app: shipper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipper
  template:
    metadata:
      labels:
        app: shipper
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Development
            - name: AzureWebJobsServiceBus
              valueFrom:
                secretKeyRef:
                  name: shipper
                  key: AzureWebJobsServiceBus
            - name: AzureWebJobsStorage
              valueFrom:
                secretKeyRef:
                  name: shipper
                  key: AzureWebJobsStorage
            - name: NServiceBus__AuditQueue
              value: audit
            - name: NServiceBus__EndpointName
              value: fantastic-bike-shipper
            - name: NServiceBus__ErrorQueue
              value: error
            - name: NServiceBus__ServiceControlInstance
              value: Particular.ServiceControl
            - name: NServiceBus__ServiceControlMonitoringInstance
              value: Particular.Monitoring
          image: andrekiba/fantastic-bike-shipper:v2
          name: fantastic-bike-shipper
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      restartPolicy: Always
