k8s/demo5/buy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buy
  namespace: fantastic-bike
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: fantasticbike1.westeurope.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: buy
              servicePort: 80
            path: /buy(/|$)(.*)
